virt01/automated/camera/frigate/templates/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ext
  namespace: camera
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.timeout: "3600"
    traefik.ingress.kubernetes.io/service.serverstransport: insecureskipverify@internal
    external-dns.alpha.kubernetes.io/target: dual.nforcer.com
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - frigate.nforcer.com
      secretName: frigate-ext-tls
  rules:
    - host: frigate.nforcer.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frigate
                port:
                  name: http-auth
